syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

service UserService {
  // Get a single User by ID
  rpc GetById(GetUserRequest) returns (User) {}
  // Create a single User validates if the passed AuthorId is valid
  rpc Create (CreateUserRequest) returns (User) {}
  // Delete a single User by ID
  rpc Delete (DeleteUserRequest) returns (google.protobuf.Empty) {}

}

// The request message containing the ID
message GetUserRequest {
  int64 ID = 1;
}
// The response message containing the user
message GetUserResponse {
  User user = 1;
}

// The request message containing the ID
message CreateUserRequest {
  string email = 1;
  string name = 2;
}
// The response message containing the user
message CreateUserResponse {
  User user = 1;
}

// The request message containing the ID
message DeleteUserRequest {
  int64 ID = 1;
}
// The response message containing the user
message DeleteUserResponse {
}

message User {
  int64 ID = 1;
  string email = 2;
  string name = 3;
}